--- a/tests/Makefile.win
+++ b/tests/Makefile.win
@@ -13,17 +13,17 @@ include ../share/make/vars.mk
 
 srcdir = .
 top_srcdir = ..
-top_builddir = $(RHOME)
+top_builddir = $(R_HOME)
 include Makefile.common
 
-RHOME = $(shell ../src/gnuwin32/Rpwd.exe ..)# must be absolute path
-R = $(RHOME)/$(BINDIR)/Rterm --vanilla LC_ALL=C SRCDIR=. R_DEFAULT_PACKAGES=
-R2 = $(RHOME)/$(BINDIR)/Rterm --vanilla SRCDIR=. R_DEFAULT_PACKAGES=
-R3 = $(RHOME)/$(BINDIR)/Rcmd check
-RDIFF = $(RHOME)/$(BINDIR)/R CMD Rdiff
+R_HOME = $(shell ../src/gnuwin32/Rpwd.exe ..)# must be absolute path
+R = $(R_HOME)/$(BINDIR)/Rterm --vanilla LC_ALL=C SRCDIR=. R_DEFAULT_PACKAGES=
+R2 = $(R_HOME)/$(BINDIR)/Rterm --vanilla SRCDIR=. R_DEFAULT_PACKAGES=
+R3 = $(R_HOME)/$(BINDIR)/Rcmd check
+RDIFF = $(R_HOME)/$(BINDIR)/R CMD Rdiff
 RVAL_IF_DIFF=0
 ## suppress fancy quotes for diff-ing
-RDCONV = LC_ALL=C $(RHOME)/$(BINDIR)/Rcmd Rdconv
+RDCONV = LC_ALL=C $(R_HOME)/$(BINDIR)/Rcmd Rdconv
 
 ECHO = echo
 ECHO_C = 
