--- a/src/gnuwin32/front-ends/Makefile
+++ b/src/gnuwin32/front-ends/Makefile
@@ -13,7 +13,7 @@ CPPFLAGS=-I../../include $(arch_DEFS)
 ## Increase stack size to 10Mb
 LARGE_STACK=-Wl,--stack=0xA00000
 ## allow 32-bit builds to address over 2Gb
-ifeq ($(strip $(WIN)),32)
+ifeq "$(WIN)" "32"
 LARGE_ADDR=-Wl,--large-address-aware
 endif
 
@@ -80,7 +80,7 @@ Rscript-LINKFLAGS=$(LARGE_ADDR) $(LARGE_STACK)
 Rgui.exe: graphappmain.o rgui.o rgico.o
 Rterm.exe: graphappmain.o rterm.o rtico.o
 
-ifneq ($(strip $(WIN)),64)
+ifneq "$(WIN))" "64"
 rcico.o: Rcmd.exe.manifest
 rgico.o: Rgui32.manifest
 rtico.o: Rterm32.manifest
