--- a/src/extra/xz/Makefile.win
+++ b/src/extra/xz/Makefile.win
@@ -23,7 +23,8 @@ SOURCES = \
  stream_flags_decoder.c stream_flags_encoder.c subblock_decoder.c \
  subblock_decoder_helper.c vli_decoder.c vli_encoder.c vli_size.c x86.c
 
-ifeq ($(strip $(WIN)),64)
+## Use assember version on i386
+ifeq "$(WIN)" "64"
 OBJECTS = $(SOURCES:.c=.o) crc32_fast.o crc64_fast.o
 else
 OBJECTS = $(SOURCES:.c=.o) crc32_x86.o crc64_x86.o
