port r53428:31 from trunk
git-svn-id: https://svn.r-project.org/R/branches/R-2-12-branch@53432 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/src/gnuwin32/installer/Makefile
+++ b/src/gnuwin32/installer/Makefile
@@ -161,8 +161,8 @@ uuids: uuidgen.exe
 files.wxs: imagedir fixups md5sums
 	"$(WIXDIR)/tallow" -1 -d $(RPREFIX) > $@
 
-R.wxs: WIXins.pl uuids files.wxs
-	$(PERL) WIXins.pl $(RPREFIX) $(RPREFIX) $(WIX_PERSONAL)
+R.wxs: WIXins.R uuids files.wxs
+	Rscript WIXins.R $(RPREFIX) $(RPREFIX) $(WIX_PERSONAL)
 
 ## for WiX 3.0 light uses -ext WixUIExtension
 ## To change compression with WiX 3.0 use
