port r53480 from trunk
git-svn-id: https://svn.r-project.org/R/branches/R-2-12-branch@53481 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/src/gnuwin32/MkRules.dist
+++ b/src/gnuwin32/MkRules.dist
@@ -78,7 +78,7 @@ HOME32=
 
 ## ====== configuration macros for building MSI installer ===========
 
-# location where WiX 3.0 was installed. Spaces allowed.
+# location where WiX 3.x was installed. Spaces allowed.
 WIX3DIR=C:/packages/WiX3.0
 
 # set to 1 for a non-elevated per-user installer
