--- a/src/extra/xz/Makefile.win
+++ b/src/extra/xz/Makefile.win
@@ -20,10 +20,11 @@ SOURCES = \
  price_table.c sha256.c simple_coder.c simple_decoder.c \
  simple_encoder.c sparc.c stream_buffer_decoder.c stream_buffer_encoder.c \
  stream_decoder.c stream_encoder.c stream_flags_common.c \
- stream_flags_decoder.c stream_flags_encoder.c subblock_decoder.c \
- subblock_decoder_helper.c vli_decoder.c vli_encoder.c vli_size.c x86.c
+ stream_flags_decoder.c stream_flags_encoder.c \
+ vli_decoder.c vli_encoder.c vli_size.c x86.c
 
-## Use assember version on i386
+
+## Use assembler version on i386
 ifeq "$(WIN)" "64"
 OBJECTS = $(SOURCES:.c=.o) crc32_fast.o crc64_fast.o
 else
