--- a/etc/Makeconf.in
+++ b/etc/Makeconf.in
@@ -25,10 +25,11 @@ ECHO = echo
 ECHO_C = @ECHO_C@
 ECHO_N = @ECHO_N@
 ECHO_T = @ECHO_T@
-F77 = @F77@
-F77_VISIBILITY = @F77_VISIBILITY@
+## NB, set FC before F77 as on Solaris make, setting FC sets F77
 FC = @FC@
 FCFLAGS = @FCFLAGS@
+F77 = @F77@
+F77_VISIBILITY = @F77_VISIBILITY@
 FFLAGS = @FFLAGS@
 FLIBS = @FLIBS@
 FCPICFLAGS = @FCPICFLAGS@
