workaround for f95 libs on x86 Solaris
git-svn-id: https://svn.r-project.org/R/trunk@53578 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/etc/Makeconf.in
+++ b/etc/Makeconf.in
@@ -28,6 +28,8 @@ ECHO_T = @ECHO_T@
 ## NB, set FC before F77 as on Solaris make, setting FC sets F77
 FC = @FC@
 FCFLAGS = @FCFLAGS@
+## additional libs needed when linking with $(FC), e.g. on Solaris
+FCLIBS =
 F77 = @F77@
 F77_VISIBILITY = @F77_VISIBILITY@
 FFLAGS = @FFLAGS@
