set FCLIBS at configure time, more on Solaris
git-svn-id: https://svn.r-project.org/R/trunk@53579 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/etc/Makeconf.in
+++ b/etc/Makeconf.in
@@ -29,7 +29,7 @@ ECHO_T = @ECHO_T@
 FC = @FC@
 FCFLAGS = @FCFLAGS@
 ## additional libs needed when linking with $(FC), e.g. on Solaris
-FCLIBS =
+FCLIBS = @FCLIBS@
 F77 = @F77@
 F77_VISIBILITY = @F77_VISIBILITY@
 FFLAGS = @FFLAGS@
