port r53578:9 from trunk
git-svn-id: https://svn.r-project.org/R/branches/R-2-12-branch@53580 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/configure.ac
+++ b/configure.ac
@@ -2134,6 +2134,9 @@ AC_LANG_POP()
 : ${SHLIB_FCLDFLAGS="${SHLIB_LDFLAGS}"}
 AC_SUBST(SHLIB_FCLD)
 AC_SUBST(SHLIB_FCLDFLAGS)
+## x86 Solaris' f95 needs additional libs when building a DSO
+FCLIBS=${FCLIBS}
+AC_SUBST(FCLIBS)
 
 
 ## Look for FCPICFLAGS
