clean up better
git-svn-id: https://svn.r-project.org/R/trunk@53586 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/tests/Embedding/Makefile.win
+++ b/tests/Embedding/Makefile.win
@@ -36,4 +36,4 @@ tryEval.exe: tryEval.o
 	$(R_CMD_LINK) -o $@ tryEval.o $(LIBR)	
 
 clean:
-	$(RM) *.exe *.o Rplots.ps
+	$(RM) *.exe *.o Rplots.pdf Rplots.ps
