--- a/tests/Makefile.win
+++ b/tests/Makefile.win
@@ -34,7 +34,7 @@ TAR = tar
 
 test-src-reg-1 = reg-tests-1a.R  reg-tests-1b.R reg-tests-2.R \
   reg-examples1.R reg-examples2.R reg-packages.R \
-  reg-IO.R reg-IO2.R reg-plot.R reg-S4.R reg-win.R
+  reg-IO.R reg-IO2.R reg-plot.R reg-S4.R reg-BLAS.R reg-win.R
 
 all-basic-tests = Examples Specific Reg Internet
 all-devel-tests = Docs IsAs Random Demo Primitive Regexp Segfault \
