--- a/tests/Makefile.in
+++ b/tests/Makefile.in
@@ -52,7 +52,7 @@ Makefile: $(srcdir)/Makefile.in $(top_builddir)/config.status
 	@cd $(top_builddir) && $(SHELL) ./config.status $(subdir)/$@
 
 test-system2: test-system2.c
-	@$(MAIN_LD) -o $@ $<
+	@$(MAIN_LD) -o $@ test-system2.c
 
 tests-System: test-system2
 	-@$(MAKE) test-system.Rout
