--- a/tests/Makefile.in
+++ b/tests/Makefile.in
@@ -81,14 +81,16 @@ clean:
 	-@for d in $(SUBDIRS); do \
 	  (cd $${d} && $(MAKE) $@); \
 	done
-	-@rm -f stamp-R Makedeps Rplot* Rprof.out data dumpdata.R \
+	-@rm -f stamp-R Makedeps Rplot* data dumpdata.R \
+	  Rplot* Rprof.out Rprofmem.out \
 	  reg-plot-latin1.ps reg-plot.ps reg-tests-*.ps \
-	  R-exts.* R-intro.R R-intro.Rout \
-	  FALSE* .R .tex mirrors.html PACKAGES* ./-package.Rd ex.gz
+	  R-exts.* R-intro.R R-intro.Rout
+	-@rm -f FALSE* PACKAGES* .R .tex mirrors.html ./-package.Rd ex.gz
 	-@rm -f testit.txt testit.html testit.tex testit-Ex.R
 	-@rm -f ver20.txt ver20.html ver20.tex ver20-Ex.R
 	-@rm -rf anRpackage myTst* myLib
-	-@rm -f *.tar.gz test-system2
+	-@rm -f *.tar.gz
+	-@rm -f keepsource.tex test-system2 test-system.Rout
 
 distclean: clean
 	-@for d in $(SUBDIRS); do \
