more on system[2]
git-svn-id: https://svn.r-project.org/R/trunk@53611 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/tests/Makefile.in
+++ b/tests/Makefile.in
@@ -51,8 +51,8 @@ all check test-all-basics test-all-devel: Makefile $(srcdir)/Makefile.common
 Makefile: $(srcdir)/Makefile.in $(top_builddir)/config.status
 	@cd $(top_builddir) && $(SHELL) ./config.status $(subdir)/$@
 
-test-system2: test-system2.c
-	@$(MAIN_LD) -o $@ test-system2.c
+test-system2: $(srcdir)/test-system2.c
+	@$(MAIN_LD) -o $@ $(srcdir)/test-system2.c
 
 tests-System: test-system2
 	-@$(MAKE) test-system.Rout
