tweaks to system(intern=TRUE)
git-svn-id: https://svn.r-project.org/R/trunk@53612 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/tests/Makefile.in
+++ b/tests/Makefile.in
@@ -54,7 +54,7 @@ Makefile: $(srcdir)/Makefile.in $(top_builddir)/config.status
 test-system2: $(srcdir)/test-system2.c
 	@$(MAIN_LD) -o $@ $(srcdir)/test-system2.c
 
-tests-System: test-system2
+test-System: test-system2
 	-@$(MAKE) test-system.Rout
 
 
