Detect and record OpenMP compiler/linker flags. Add option to enable byte-compilation of packages.
git-svn-id: https://svn.r-project.org/R/trunk@53749 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/Makeconf.in
+++ b/Makeconf.in
@@ -63,8 +63,13 @@ MAIN_LDFLAGS = @MAIN_LDFLAGS@ @WANT_R_SHLIB_FALSE@ @USE_EXPORTFILES_TRUE@ -Wl,-b
 MAIN_LINK = $(MAIN_LD) $(MAIN_LDFLAGS) $(LDFLAGS)
 ## need this for bootstrapping
 MKINSTALLDIRS = @R_SHELL@ $(top_srcdir)/src/scripts/mkinstalldirs.in
+NOTANGLE = @NOTANGLE@
 OBJC = @OBJC@
 OBJCFLAGS = @OBJCFLAGS@
+OPENMP_CFLAGS = @OPENMP_CFLAGS@
+OPENMP_CXXFLAGS = @OPENMP_CXXFLAGS@
+OPENMP_FCFLAGS = @OPENMP_FCFLAGS@
+OPENMP_FFLAGS = @OPENMP_FFLAGS@
 R_ARCH = @R_ARCH@
 R_FRAMEWORK_DIR = $(prefix)/R.framework
 R_GZIPCMD = @R_GZIPCMD@
