--- a/Makeconf.in
+++ b/Makeconf.in
@@ -66,19 +66,17 @@ MKINSTALLDIRS = @R_SHELL@ $(top_srcdir)/src/scripts/mkinstalldirs.in
 NOTANGLE = @NOTANGLE@
 OBJC = @OBJC@
 OBJCFLAGS = @OBJCFLAGS@
-OPENMP_CFLAGS = @OPENMP_CFLAGS@
-OPENMP_CXXFLAGS = @OPENMP_CXXFLAGS@
-OPENMP_FCFLAGS = @OPENMP_FCFLAGS@
-OPENMP_FFLAGS = @OPENMP_FFLAGS@
 R_ARCH = @R_ARCH@
 R_FRAMEWORK_DIR = $(prefix)/R.framework
 R_GZIPCMD = @R_GZIPCMD@
 ## needed for AIX only
 @USE_EXPORTFILES_TRUE@ R_HOME = $(top_builddir)
+R_OPENMP_CFLAGS = @R_OPENMP_CFLAGS@
+R_OPENMP_FFLAGS = @R_OPENMP_FFLAGS@
 R_OSTYPE = @R_OSTYPE@
 R_PKGS = $(R_PKGS_BASE) @USE_RECOMMENDED_PACKAGES_TRUE@ $(R_PKGS_RECOMMENDED)
 R_PLATFORM = @R_PLATFORM@
-R_XTRA_CFLAGS = @R_XTRA_CFLAGS@
+R_XTRA_CFLAGS = @R_XTRA_CFLAGS@ 
 R_XTRA_CPPFLAGS = @R_XTRA_CPPFLAGS@ -I. -I$(top_builddir)/src/include -I$(top_srcdir)/src/include
 R_XTRA_FFLAGS = @R_XTRA_FFLAGS@
 R_XTRA_LIBS = @R_XTRA_LIBS@
@@ -102,12 +100,12 @@ X_PRE_LIBS = @X_PRE_LIBS@
 X_EXTRA_LIBS = @X_EXTRA_LIBS@
 YACC = @YACC@
 
-ALL_CFLAGS = $(R_XTRA_CFLAGS) $(MAIN_CFLAGS) $(CFLAGS)
-ALL_CPPFLAGS = $(R_XTRA_CPPFLAGS) $(CPPFLAGS) $(DEFS)
-ALL_FFLAGS = $(R_XTRA_FFLAGS) $(MAIN_FFLAGS) $(FFLAGS)
+ALL_CFLAGS = $(R_XTRA_CFLAGS) $(R_OPENMP_CFLAGS) $(MAIN_CFLAGS) $(CFLAGS)
+ALL_CPPFLAGS = $(R_XTRA_CPPFLAGS) $(R_OPENMP_CFLAGS) $(CPPFLAGS) $(DEFS)
+ALL_FFLAGS = $(R_XTRA_FFLAGS) $(R_OPENMP_FFLAGS) $(MAIN_FFLAGS) $(FFLAGS)
 ALL_OBJCFLAGS = $(R_XTRA_OBJCFLAGS) $(MAIN_OBJCFLAGS) $(OBJCFLAGS)
-ALL_CFLAGS_LO = $(R_XTRA_CFLAGS) $(CPICFLAGS) $(SHLIB_CFLAGS) $(CFLAGS)
-ALL_FFLAGS_LO = $(R_XTRA_FFLAGS) $(FPICFLAGS) $(SHLIB_FFLAGS) $(FFLAGS)
+ALL_CFLAGS_LO = $(R_XTRA_CFLAGS) $(R_OPENMP_CFLAGS) $(CPICFLAGS) $(SHLIB_CFLAGS) $(CFLAGS)
+ALL_FFLAGS_LO = $(R_XTRA_FFLAGS) $(R_OPENMP_FFLAGS) $(FPICFLAGS) $(SHLIB_FFLAGS) $(FFLAGS)
 
 .SUFFIXES:
 .SUFFIXES: .c .f .m .d .o
