--- a/etc/Makeconf.in
+++ b/etc/Makeconf.in
@@ -65,6 +65,10 @@ OBJC = @OBJC@
 OBJCFLAGS = @OBJCFLAGS@
 OBJC_LIBS = @OBJC_LIBS@
 OBJCXX = @OBJCXX@
+PKG_OPENMP_CFLAGS = @PKG_OPENMP_CFLAGS@
+PKG_OPENMP_CXXFLAGS = @PKG_OPENMP_CXXFLAGS@
+PKG_OPENMP_FCFLAGS = @PKG_OPENMP_FCFLAGS@
+PKG_OPENMP_FFLAGS = @PKG_OPENMP_FFLAGS@
 R_ARCH = @R_ARCH@
 RANLIB = @RANLIB@
 SAFE_FFLAGS = @SAFE_FFLAGS@
@@ -96,12 +100,12 @@ R_XTRA_CPPFLAGS = @R_XTRA_CPPFLAGS@ @R_XTRA_CPPFLAGS2@
 R_XTRA_CXXFLAGS = @R_XTRA_CXXFLAGS@
 R_XTRA_FFLAGS = @R_XTRA_FFLAGS@
 
-ALL_CFLAGS = $(R_XTRA_CFLAGS) $(PKG_CFLAGS) $(CPICFLAGS) $(SHLIB_CFLAGS) $(CFLAGS)
-ALL_CPPFLAGS = $(R_XTRA_CPPFLAGS) $(PKG_CPPFLAGS) $(CPPFLAGS) $(CLINK_CPPFLAGS)
-ALL_CXXFLAGS = $(R_XTRA_CXXFLAGS) $(PKG_CXXFLAGS) $(CXXPICFLAGS) $(SHLIB_CXXFLAGS) $(CXXFLAGS)
+ALL_CFLAGS = $(R_XTRA_CFLAGS) $(PKG_OPENMP_CFLAGS) $(PKG_CFLAGS) $(CPICFLAGS) $(SHLIB_CFLAGS) $(CFLAGS)
+ALL_CPPFLAGS = $(R_XTRA_CPPFLAGS) $(PKG_OPENMP_CFLAGS) $(PKG_CPPFLAGS) $(CPPFLAGS) $(CLINK_CPPFLAGS)
+ALL_CXXFLAGS = $(R_XTRA_CXXFLAGS) $(PKG_OPENMP_CXXFLAGS) $(PKG_CXXFLAGS) $(CXXPICFLAGS) $(SHLIB_CXXFLAGS) $(CXXFLAGS)
 ALL_OBJCFLAGS = $(PKG_OBJCFLAGS) $(CPICFLAGS) $(SHLIB_CFLAGS) $(OBJCFLAGS)
 ALL_OBJCXXFLAGS = $(PKG_OBJCXXFLAGS) $(CXXPICFLAGS) $(SHLIB_CXXFLAGS) $(OBJCXXFLAGS)
-ALL_FFLAGS = $(R_XTRA_FFLAGS) $(PKG_FFLAGS) $(FPICFLAGS) $(SHLIB_FFLAGS) $(FFLAGS)
+ALL_FFLAGS = $(R_XTRA_FFLAGS) $(PKG_OPENMP_FFLAGS) $(PKG_FFLAGS) $(FPICFLAGS) $(SHLIB_FFLAGS) $(FFLAGS)
 ALL_LIBS = $(PKG_LIBS) $(SHLIB_LIBADD) $(LIBR)@DYLIB_UNDEFINED_ALLOWED_FALSE@ $(LIBINTL)
 
 .SUFFIXES:
@@ -117,6 +121,6 @@ ALL_LIBS = $(PKG_LIBS) $(SHLIB_LIBADD) $(LIBR)@DYLIB_UNDEFINED_ALLOWED_FALSE@ $(
 .f.o:
 	$(F77) $(ALL_FFLAGS) -c $< -o $@
 .f95.o:
-	$(FC) $(PKG_FCFLAGS) $(FCPICFLAGS) $(FCFLAGS) -c @FCFLAGS_f95@ $< -o $@
+	$(FC) $(PKG_OPENMP_FCFLAGS) $(PKG_FCFLAGS) $(FCPICFLAGS) $(FCFLAGS) -c @FCFLAGS_f95@ $< -o $@
 .f90.o:
-	$(FC) $(PKG_FCFLAGS) $(FCPICFLAGS) $(FCFLAGS) -c @FCFLAGS_f90@ $< -o $@
+	$(FC) $(PKG_OPENMP_FCFLAGS) $(PKG_FCFLAGS) $(FCPICFLAGS) $(FCFLAGS) -c @FCFLAGS_f90@ $< -o $@
