Provide SUPPORT_OPENMP define in Rconfig.h.
git-svn-id: https://svn.r-project.org/R/trunk@53762 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/configure.ac
+++ b/configure.ac
@@ -2235,6 +2235,8 @@ if test "x${shlib_ld_was_given}" = xno -a \
   R_SH_VAR_ADD(SHLIB_LDFLAGS, [${OPENMP_CFLAGS}])
   R_SH_VAR_ADD(SHLIB_CXXLDFLAGS, [${OPENMP_CXXFLAGS}])
   R_SH_VAR_ADD(SHLIB_FCLDFLAGS, [${OPENMP_FCFLAGS}])
+  AC_DEFINE(SUPPORT_OPENMP, 1,
+            [Define if you C/C++/Fortran OpenMP support for package code.])
 else
   PKG_OPENMP_CFLAGS=
   PKG_OPENMP_CXXFLAGS=
