Use SHLIB_OPENMP prefix for package OpenMP flags.
git-svn-id: https://svn.r-project.org/R/trunk@53792 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/configure.ac
+++ b/configure.ac
@@ -2228,25 +2228,22 @@ if test "x${shlib_ld_was_given}" = xno -a \
         "x${shlib_fcld_was_given}" = xno -a \
         "${SHLIB_FCLD}" = "${FC}" -a \
         "x${ac_cv_prog_fc_openmp}" != "xunsupported"; then
-  PKG_OPENMP_CFLAGS="${OPENMP_CFLAGS}"
-  PKG_OPENMP_CXXFLAGS="${OPENMP_CXXFLAGS}"
-  PKG_OPENMP_FCFLAGS="${OPENMP_FCFLAGS}"
-  PKG_OPENMP_FFLAGS="${OPENMP_FFLAGS}"
-  R_SH_VAR_ADD(SHLIB_LDFLAGS, [${OPENMP_CFLAGS}])
-  R_SH_VAR_ADD(SHLIB_CXXLDFLAGS, [${OPENMP_CXXFLAGS}])
-  R_SH_VAR_ADD(SHLIB_FCLDFLAGS, [${OPENMP_FCFLAGS}])
+  SHLIB_OPENMP_CFLAGS="${OPENMP_CFLAGS}"
+  SHLIB_OPENMP_CXXFLAGS="${OPENMP_CXXFLAGS}"
+  SHLIB_OPENMP_FCFLAGS="${OPENMP_FCFLAGS}"
+  SHLIB_OPENMP_FFLAGS="${OPENMP_FFLAGS}"
   AC_DEFINE(SUPPORT_OPENMP, 1,
             [Define if you C/C++/Fortran OpenMP support for package code.])
 else
-  PKG_OPENMP_CFLAGS=
-  PKG_OPENMP_CXXFLAGS=
-  PKG_OPENMP_FCFLAGS=
-  PKG_OPENMP_FFLAGS=
+  SHLIB_OPENMP_CFLAGS=
+  SHLIB_OPENMP_CXXFLAGS=
+  SHLIB_OPENMP_FCFLAGS=
+  SHLIB_OPENMP_FFLAGS=
 fi
-AC_SUBST(PKG_OPENMP_CFLAGS)
-AC_SUBST(PKG_OPENMP_CXXFLAGS)
-AC_SUBST(PKG_OPENMP_FCFLAGS)
-AC_SUBST(PKG_OPENMP_FFLAGS)
+AC_SUBST(SHLIB_OPENMP_CFLAGS)
+AC_SUBST(SHLIB_OPENMP_CXXFLAGS)
+AC_SUBST(SHLIB_OPENMP_FCFLAGS)
+AC_SUBST(SHLIB_OPENMP_FFLAGS)
 
 
 ## Look for FCPICFLAGS
