--- a/etc/Makeconf.in
+++ b/etc/Makeconf.in
@@ -65,10 +65,6 @@ OBJC = @OBJC@
 OBJCFLAGS = @OBJCFLAGS@
 OBJC_LIBS = @OBJC_LIBS@
 OBJCXX = @OBJCXX@
-PKG_OPENMP_CFLAGS = @PKG_OPENMP_CFLAGS@
-PKG_OPENMP_CXXFLAGS = @PKG_OPENMP_CXXFLAGS@
-PKG_OPENMP_FCFLAGS = @PKG_OPENMP_FCFLAGS@
-PKG_OPENMP_FFLAGS = @PKG_OPENMP_FFLAGS@
 R_ARCH = @R_ARCH@
 RANLIB = @RANLIB@
 SAFE_FFLAGS = @SAFE_FFLAGS@
@@ -86,6 +82,10 @@ SHLIB_LD = @SHLIB_LD@
 SHLIB_LDFLAGS = @SHLIB_LDFLAGS@
 SHLIB_LIBADD = @SHLIB_LIBADD@
 SHLIB_LINK = $(SHLIB_LD) $(SHLIB_LDFLAGS) $(LDFLAGS)
+SHLIB_OPENMP_CFLAGS = @SHLIB_OPENMP_CFLAGS@
+SHLIB_OPENMP_CXXFLAGS = @SHLIB_OPENMP_CXXFLAGS@
+SHLIB_OPENMP_FCFLAGS = @SHLIB_OPENMP_FCFLAGS@
+SHLIB_OPENMP_FFLAGS = @SHLIB_OPENMP_FFLAGS@
 STRIP_LIBS = @striplib@
 STRIP_STATIC_LIBS = @stripstaticlib@
 TCLTK_CPPFLAGS = @TCLTK_CPPFLAGS@
