add file.link() for hard links, use in untar2()
git-svn-id: https://svn.r-project.org/R/trunk@53923 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/src/include/config.h.in
+++ b/src/include/config.h.in
@@ -400,6 +400,9 @@
 /* Define to 1 if you have the <limits.h> header file. */
 #undef HAVE_LIMITS_H
 
+/* Define to 1 if you have the `link' function. */
+#undef HAVE_LINK
+
 /* Define to 1 if you have the <locale.h> header file. */
 #undef HAVE_LOCALE_H
 
