update for libpng-1.5.x and tiff-4.0.0beta
git-svn-id: https://svn.r-project.org/R/trunk@54038 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/src/gnuwin32/bitmap/Makefile
+++ b/src/gnuwin32/bitmap/Makefile
@@ -19,7 +19,7 @@ DLL: ../../../library/grDevices/libs$(R_ARCH)/Rbitmap.dll
 buildzlib:
 	@$(MAKE) -C ../../extra/zlib -f Makefile.win
 
-## There is a makefile.mingw these days
+## There is a makefile.mingw in 1.2.x and 1.4.x but not 1.5.x
 ## Neither the makefile.{mingw,std} build pnggccrd.c but it is needed if
 ## the compiler defines __MMX__ , which the win64 gcc does.
 ## So we need to explicitly disable it.
@@ -28,7 +28,7 @@ buildpng:
 	$(MAKE) CC='$(CC)' AR='$(AR)' \
 	  CFLAGS="-O3 -I../../../extra/zlib -DPNG_NO_MMX_CODE" \
 	  RANLIB=$(RANLIB) ZLIBLIB=../../../extra/zlib -C $(PNGDIR) \
-	  -f scripts/makefile.mingw prefix=foo libpng.a
+	  -f scripts/makefile.gcc prefix=foo libpng.a
 
 buildjpeg: $(JPEGDIR)/jconfig.h Makefile.jpeg
 	$(MAKE) CC='$(CC)' AR='$(AR) rc' RANLIB=$(RANLIB) JPEGDIR=$(JPEGDIR) -C $(JPEGDIR) \
